Implement application-architectures endpoint
